--- a/flashing_lights_rgb.yaml
+++ b/flashing_lights_rgb.yaml
@@ -3,7 +3,7 @@ blueprint:
   description: >
      Flashing lights via on off and delay and finally restore the previous light states.
   domain: automation
-  source_url: https://github.com/neil-bh/scripts/blob/main/Home%20Assistant/Blueprints/flashing_lights_rgb.yaml
+  source_url: https://github.com/neil-bh/home-assistant-blueprints/blob/main/flashing_lights_rgb.yaml
   input:
     activated:
       name: Activated
