--- a/flashing_lights_rgb.yaml
+++ b/flashing_lights_rgb.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: flashing lights
+  name: flashing lights rgb
   description: >
      Flashing lights via on off and delay and finally restore the previous light states.
   domain: automation
